Se agrega endpoint para validar solic